2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-05-20  David Daney  <ddaney@avtrex.com>

	PR libgcj/36252
	* java/lang/natString.ccn: Add
	#include <java/io/CharConversionException.h>.
	(init (byte[], int, int, String)): Catch and ignore
	CharConversionException.  Break out of conversion loop
	on incomplete input.
	* testsuite/libjava.lang/PR36252.java: New test.
	* testsuite/libjava.lang/PR36252.out: New file, its expected output.
	* testsuite/libjava.lang/PR36252.jar: New file, its pre-compiled
	jar file.

2008-03-13  Andrew Haley  <aph@redhat.com>

	* link.cc (_Jv_Linker::resolve_method_entry): Remove broken class
	loader test.

2008-03-05  Release Manager

	* GCC 4.3.0 released.

2008-03-04  Andrew Haley  <aph@redhat.com>

	* testsuite/lib/libjava.exp (libjava_arguments): Use regexp
	instead of string match when checking for linux targets.

2008-03-03  Matthias Klose  <doko@ubuntu.com>

	* classpath/tools/classes/gnu/classpath/tools/orbd/Main.class,
	classpath/lib/gnu/java/locale/LocaleData.class
	classpath/lib/gnu/java/rmi/registry/RegistryImpl.class
	classpath/lib/gnu/gcj/convert/Convert.class
	classpath/lib/gnu/gcj/tools/gcj_dbtool/Main.class: Regenerate.

2008-03-02  Jakub Jelinek  <jakub@redhat.com>

	* gnu/gcj/convert/Convert.java (version): Update copyright notice
	dates.
	* gnu/gcj/tools/gcj_dbtool/Main.java (main): Likewise.

2008-02-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR libgcj/33085
	* configure: Regenerate.

2008-02-15  Andreas Tobler  <a.tobler@schweiz.org>

	PR testsuite/35208
	* testsuite/libjava.jvmti/interp/natgetstacktrace.cc
	(Java_getstacktrace_natRunner): Increase the usleep time to a value
	which prevents OS-X to get into a deadlock.

2008-02-06  Andreas Tobler  <a.tobler@schweiz.org>

	PR libgcj/30071
	* Makefile.am (install-exec-hook): Add install-binPROGRAMS.
	* Makefile.in: Regenerate.

2008-01-24  David Edelsohn  <edelsohn@gnu.org>

	* shlibpath.m4: Add AIX 6 support.
	* configure: Regenerate.
