@@ -1,3 +1,10 @@
+2008-07-02  Matthias Klose  <doko@ubuntu.com>
+
+	* configure.ac: Substitute gcjsubdir.
+	* Makefile.am (db_pathtail): Use it.
+	* Makefile.in include/Makefile.in, testsuite/Makefile.in,
+	gcj/Makefile.in, configure: Regenerate.
+
 2008-06-06  Release Manager
 
 	* GCC 4.3.1 released.
